--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="coba.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="desktop-1">
@@ -21,6 +21,7 @@
           class="img-3641-removebg-preview-1-1"
           src="img-3641-removebg-preview-1-10.png"
         />
+
         <div class="intro">
           <div class="it">IT</div>
           <div class="rectangle-1"></div>
@@ -50,6 +51,9 @@
         <div class="ellipse-3"></div>
         <div class="e">E</div>
         <img class="separator-black-2" src="separator-black-20.png" />
+
+
+
         <div class="footer">
           <div class="rectangle-66"></div>
           <div class="_2024-elok-faiqoh-all-rights-reserved">
@@ -135,6 +139,9 @@
             />
           </svg>
         </div>
+
+
+
         <div class="skill">
           <div class="skills">Skills</div>
           <img class="separator-black-3" src="separator-black-30.png" />
@@ -309,6 +316,8 @@
           <div class="scratch">SCRATCH</div>
           <img class="image-18" src="image-180.png" />
         </div>
+
+
         <div class="ellipse-10"></div>
         <div class="ellipse-11"></div>
         <div class="ellipse-12"></div>
@@ -682,6 +691,9 @@
             </div>
           </div>
         </div>
+
+
+        
         <svg
           class="logososmed"
           width="245"
