update css and html

--- a/coba2.html
+++ b/coba2.html
@@ -22,8 +22,8 @@
         <div class="elok-faiqoh">Elok Faiqoh</div>
         <div class="front-end-web-developer">Front-end Web Developer</div>
         <img
-          class="img-3641-removebg-preview-1-1"
-          src="img-3641-removebg-preview-1-10.png"
+          class="img-elok"
+          src="images/myphoto.png"
         />
         <div class="ellipse-2"></div>
         <div class="ellipse-3"></div>
@@ -238,7 +238,7 @@
       <div class="edu-expert">
         <img class="separator-black-32" src="separator-black-31.png" />
         <div class="rectangle-74"></div>
-        <div class="educations-experience">Educations &amp; Experience</div>
+        <h2>Educations &amp; Experience</h2>
         <div class="education">
           <div class="rectangle-14"></div>
           <div class="universitas-negeri-surabaya">
@@ -250,15 +250,10 @@
           </div>
           <div class="science">SCIENCE</div>
           <div class="science2">SCIENCE</div>
-          <div class="informtics">INFORMTICS</div>
-          <div class="_2017-2020">
-            <span>
-              <span class="_2017-2020-span">2017 - 202</span>
-              <span class="_2017-2020-span2">0</span>
-            </span>
-          </div>
+          <div class="informtics">INFORMATICS</div>
+          <div class="_2017-2020">2017 - 2020</div>
           <div class="_2020-2023">2020 - 2023</div>
-          <div class="_2023-2026">2023 - 2026</div>
+          <div class="_2023-NOW">2023 - NOW</div>
           <div class="iconly-regular-outline-login">
             <svg
               class="login"
@@ -568,40 +563,38 @@
         <div class="ellipse-11"></div>
         <div class="experience">
           <div class="_2021">
-            <div class="rectangle-28"></div>
-            <div class="publishing-an-anthology-book-ask-i-ilmi">
-              Publishing an anthology book <br />“Ask-i Ilmi”
+            <div class="rectangle-28">
+              <div class="teks-2021">
+                Publishing an anthology book <br />“Ask-i Ilmi”
+              </div>
             </div>
-            <div class="rectangle-25"></div>
-            <div class="_20212">2021</div>
+            <div class="rectangle-25">
+              <div class="_20212">2021</div>
+            </div>
           </div>
           <div class="_2022">
-            <div class="rectangle-29"></div>
-            <div class="global-certification-of-web-design-basics">
-              Global Certification of Web Design Basics
-            </div>
-            <div class="osis-secretary-ma-zainul-hasan-genggong">
-              OSIS Secretary MA Zainul <br />Hasan Genggong
-            </div>
-            <div class="the-1st-winner-of-the-scratch-game-programming">
+            <div class="rectangle-29">
+              <div class="teks-2022">
+              Global Certification of Web Design Basics <br>
+              OSIS Secretary MA Zainul <br />Hasan Genggong <br>
               The 1st winner of the Scratch Game Programming
             </div>
-            <div class="rectangle-26"></div>
-            <div class="_20222">2022</div>
+          </div>
+            <div class="rectangle-26">
+              <div class="_20222">2022</div>
+            </div>
           </div>
           <div class="_2023">
-            <div class="rectangle-30"></div>
-            <div class="the-2nd-winner-of-the-front-end-web-final-project">
-              The 2nd winner of the Front End Web Final Project
+            <div class="rectangle-30">
+              <div class="teks-2023">
+                The 2nd winner of the Front End Web Final Project <br>
+                Scholarships for English courses in Pare <br>
+                International certification for Microsoft Word 2019
+              </div>
             </div>
-            <div class="scholarships-for-english-courses-in-pare">
-              Scholarships for English courses in Pare
+            <div class="rectangle-27">
+              <div class="_20232">2023</div>
             </div>
-            <div class="international-certification-for-microsoft-word-2019">
-              International certification for Microsoft Word 2019
-            </div>
-            <div class="rectangle-27"></div>
-            <div class="_20232">2023</div>
           </div>
         </div>
       </div>
@@ -611,41 +604,42 @@
         <div class="ellipse-12"></div>
         <div class="ellipse-13"></div>
         <img class="separator-black-3" src="separator-black-30.png" />
-        <div class="skills2">Skills</div>
+        <h2>Skills</h2>
         <div class="usingnow">
           <div class="using-now">USING NOW:</div>
-          <img class="image-22" src="image-220.png" />
-          <img class="image-23" src="image-230.png" />
-          <img class="image-24" src="image-240.png" />
-          <img class="image-25" src="image-250.png" />
-          <img class="image-26" src="image-260.png" />
-          <img class="image-27" src="image-270.png" />
-          <img class="image-28" src="image-280.png" />
+          <img class="image-22" src="images/html.png" />
+          <img class="image-23" src="images/css.png" />
+          <img class="image-24" src="images/js.png" />
+          <img class="image-25" src="images/git.png" />
+          <img class="image-26" src="images/bootstrap.png" />
+          <img class="image-27" src="images/figma.png" />
+          <img class="image-28" src="images/cpp.png" />
         </div>
         <div class="learning">
           <div class="learning2">LEARNING:</div>
-          <img class="image-30" src="image-300.png" />
+          <img class="image-30" src="images/react.png" />
+          <img class="image-31" src="images/nodejs.png" />
         </div>
         <div class="other">
           <div class="other-skills">OTHER SKILLS:</div>
-          <img class="image-31" src="image-310.png" />
-          <img class="image-32" src="image-320.png" />
+          <img class="image-32" src="images/english.png" />
+          <img class="image-33" src="images/scratch.png" />
         </div>
       </div>
 
       <!-- ====================== contact ======================== -->
       <div class="contact">
         <div class="get-in-touch">Get in touch</div>
-        <div class="looking-for-help-fill-the-form-and-connect-with-me">
-          Looking for help? Fill the form and connect with me
+        <div class="teks-getintouch">
+          <h4>Looking for help? Fill the form and connect with me <br><br>
+            Location <br></h4>
+          <h6>Tenggarang, Bondowoso</h6><br>
+          <h4>Phone <br></h4>
+          <h6>082331774409</h6><br>
+          <h4>Gmail <br></h4>
+          <h6>elokfaiqoh885@gmail.com</h6>
         </div>
         <div class="let-s-connect">Let’s connect</div>
-        <div class="looking-for-help-fill-the-form-and-connect-with-me2">
-          Looking for help? Fill the form and connect with me
-        </div>
-        <div class="location">Location</div>
-        <div class="phone">Phone</div>
-        <div class="gmail">Gmail</div>
         <div class="iconly-regular-outline-home">
           <svg
             class="home"
@@ -731,9 +725,6 @@
             </g>
           </svg>
         </div>
-        <div class="tenggarang-bondowoso">Tenggarang, Bondowoso</div>
-        <div class="_082331774409">082331774409</div>
-        <div class="elokfaiqoh-885-gmail-com">elokfaiqoh885@gmail.com</div>
         <div class="rectangle-19"></div>
         <div class="rectangle-21"></div>
         <div class="rectangle-22"></div>
@@ -748,7 +739,8 @@
 
       <!-- =========================== footer =========================== -->
       <div class="footer">
-        <div class="_2024-elok-faiqoh-all-rights-reserved">
+        <h6 class="back-to-top">BACK TO TOP</h6>
+        <h4 class="h4_footer">
           <span>
             <span class="_2024-elok-faiqoh-all-rights-reserved-span"
               >@2024 Elok Faiqoh
@@ -757,8 +749,7 @@
               >All Rights Reserved.</span
             >
           </span>
-        </div>
-        <div class="back-to-top">BACK TO TOP</div>
+        </h4>
         <svg
           class="ic-baseline-double-arrow"
           width="15"
