--- a/about.html
+++ b/about.html
@@ -1,168 +1,11 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portofolio</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
-
-    <link rel="stylesheet" href="style1.css">
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <title>Document</title>
 </head>
 <body>
     
-    <!-- Navigation -->
-    <nav>
-        <img src="images/logo.png" alt="">
-        <div class="navigation">
-            <ul>
-                <i id="menu-close" class="fas fa-times"></i>
-                <li><a class="active" href="index1.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="course.html">Portofolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <img id="menu-btn" src="images/menu.png" alt="">
-        <div>
-
-    </nav>
-
-    <!-- Home -->
-
-    <section id="about-home">
-        <h2>About me</h2>
-        
-    </section>
-
-    <section id="about-container">
-        <div class="about-img">
-            <img src="images/a.png" alt="">
-        </div>
-
-        <div class="about-text">
-            <h2>Welcome to My Portofolio</h2>
-            <p>You can start and finish one of these popular courses in under a day - for free! check out the list below.. Take the course for free</p>
-            <div class="about-fe">
-                <img src="images/fe1.png" alt="">
-                <div class="fe-text">
-                    <h5>400+ Courses</h5>
-                    <p>You can start and finish one of these popular courses in under our site</p>
-                </div>
-            </div>
-            <div class="about-fe">
-                <img src="images/fe2.png" alt="">
-                <div class="fe-text">
-                    <h5>Lifetime Access</h5>
-                    <p>You can start and finish one of these popular courses in under our site</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- features -->
-
-    <section id="features">
-        <h1>Awesome Experience</h1>
-        <p>Replenish man have thing gathering lights yielding shall you</p>
-        <div class="fea-base">
-            <div class="fea-box">
-                <a href="school.html"><i class="fas fa-graduation-cap"></i></a>
-                <a href="school.html"><h3>School</h3></a>
-                <p>This is my hystory school</p>
-                <button><a href="school.html">read more</a></button>
-            </div>
-            <div class="fea-box">
-                <a href="awards.html"><i class="fas fa-file-certificate"></i></a>
-                <a href="awards.html"><h3>Awards</h3></a>
-                <p>This is my awards</p>
-                <button><a href="awards.html">read more</a></button>
-            </div>
-            <div class="fea-box">
-                <a href="certificate.html"><i class="fas fa-award"></i></a>
-                <a href="certificate.html"><h3>Certification</h3></a>
-                <p>This is my skills that certified</p>
-                <button><a href="certificate.html">read more</a></button>
-            </div>
-        </div>
-    </section>
-
-    <section id="trust">
-        <h1>Trusted By</h1>
-        <p>Replenish man have thing gathering lights yielding shall you</p>
-        <div class="trust-img">
-            <img src="images/trust (1).png" alt="">
-            <img src="images/trust (2).png" alt="">
-            <img src="images/trust (3).png" alt="">
-            <img src="images/trust (4).png" alt="">
-            <img src="images/trust (5).png" alt="">
-            <img src="images/trust (6).png" alt="">
-        </div>
-    </section>
-
-    <footer>
-        <div class="footer-col">
-            <h3>Top Product</h3>
-            <li>Manage Reputation</li>
-            <li>Power Tools</li>
-            <li>Managed Website</li>
-            <li>Marketing Service</li>
-        </div>
-
-        <div class="footer-col">
-            <h3>Top Product</h3>
-            <li>Manage Reputation</li>
-            <li>Power Tools</li>
-            <li>Managed Website</li>
-            <li>Marketing Service</li>
-        </div>
-
-        <div class="footer-col">
-            <h3>Top Product</h3>
-            <li>Manage Reputation</li>
-            <li>Power Tools</li>
-            <li>Managed Website</li>
-            <li>Marketing Service</li>
-        </div>
-
-        <div class="footer-col">
-            <h3>Top Product</h3>
-            <li>Manage Reputation</li>
-            <li>Power Tools</li>
-            <li>Managed Website</li>
-            <li>Marketing Service</li>
-        </div>
-
-        <div class="footer-col">
-            <h3>Newsletter</h3>
-            <p>You can trust us, we only send promo offers,</p>
-            <div class="subcribe">
-                <input type="text" placeholder="Your Email address">
-                <a href="#" class="yellow">SUBCRIBE</a>
-            </div>
-        </div>
-
-        <div class="copyright">
-            <p>Copyright @2021 All rights reserved | This template is made by Techetc</p>
-            <div class="pro-links">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-linkedin-in"></i>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        $('#menu-btn').click(function() {
-            $('nav .navigation ul').addClass('active')
-        });
-        $('#menu-close').click(function() {
-            $('nav .navigation ul').removeClass('active')
-        });
-    </script>
-
 </body>
 </html>
-
