--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="ml-3 text-xl">Elok Faiqoh</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-pink-200">First Link</a>
+            <a href="#intro" class="mr-5 hover:text-pink-200">About me</a>
             <a class="mr-5 hover:text-pink-200">Second Link</a>
             <a class="mr-5 hover:text-pink-200">Third Link</a>
           </nav>
@@ -30,7 +30,7 @@
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
             <h1 class="title-font md:text-6xl text-3xl mb-6 font-bold text-white">Hi, I am <span class="auto-type text-pink-500"></span> </h1>
             <h2 class="title-font sm:text-3xl text-3xl mb-8 font-medium text-white">Junior Front End Web Dev</h2>
-            <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+            <p class="mb-8 pr-24">I am a creative, innovative person with a high learning spirit and a love of learning new things.  All about IT.</p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg">Button</button>
               <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Button</button>
@@ -48,7 +48,9 @@
         <div  data-aos="fade-up" data-aos-duration="3000" class="container mx-auto flex px-0 py-24 items-center justify-center flex-col">
           <div class="text-center lg:w-3/3 w-full">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Get to Know Me</h1>
-            <p class="text-justify  pt-10 pb-3">My name is Elok Faiqoh, a student of informatics Engineering at Surabaya State University. I'm interested in the field of information technology like software developer, or fullstack developer and want to develop a career in that field. On this website, you'll find information about me, from my education, experience, to the projects I've been working on. I hope this information can help you get to know me better. I'm a creative, innovative person with a high learning spirit. I've always been interested in learning new things, especially those related to information technology.</p>
+            <p class="text-justify  pt-10">Halo! Perkenalkan nama saya Elok Faiqoh. Saat ini saya sedang menempuh pendidikan di jurusan Teknik Informatika Universitas Negeri Surabaya. Ketertarikan saya yang mendalam pada bidang teknologi informasi, khususnya pengembangan perangkat lunak, membuat saya ingin berkarir sebagai software developer atau fullstack developer.</p>
+              <p class="text-justify">Website ini dibuat sebagai wadah untuk memperkenalkan diri saya kepada Anda. Di sini, Anda bisa menemukan berbagai informasi mengenai saya, mulai dari latar belakang pendidikan, pengalaman, hingga proyek-proyek yang pernah saya kerjakan. Saya harap informasi ini dapat membantu Anda mengenal saya lebih baik.</p>
+              <p class="text-justify  pb-3">Selain memiliki ketertarikan yang besar pada teknologi informasi, saya juga termasuk orang yang kreatif, inovatif, dan memiliki semangat belajar yang tinggi. Dorongan untuk terus belajar dan menggali ilmu baru, terutama yang berkaitan dengan dunia IT, menjadi prinsip yang saya pegang teguh.</p>
               <p class="text-justify">Thank you for visiting my website.</p><br>
               <p class="text-justify">Greetings,</p>
               <p class="text-justify">Elok Faiqoh</p>
@@ -418,6 +420,11 @@
                 <circle cx="4" cy="4" r="2" stroke="none"></circle>
               </svg>
             </a>
+            <a class="ml-3 text-gray-400" href="https://www.linkedin.com/in/elokfaiqohhh/" target="_blank" rel="noopener noreferrer">
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" fill="none" viewBox="0 0 21 20">
+                <path fill="#9CA3AF" d="M10.273 0C4.597-.002 0 4.593 0 10.264c0 4.485 2.876 8.297 6.88 9.697.54.135.458-.248.458-.51v-1.778c-3.115.365-3.241-1.696-3.45-2.04-.422-.721-1.42-.905-1.122-1.25.709-.364 1.432.093 2.27 1.33.605.897 1.788.746 2.387.596.13-.539.41-1.021.796-1.395-3.227-.578-4.572-2.548-4.572-4.889 0-1.136.374-2.18 1.109-3.022-.469-1.389.043-2.578.112-2.755 1.334-.119 2.72.955 2.828 1.04.757-.204 1.622-.312 2.59-.312.974 0 1.842.112 2.606.319.26-.197 1.545-1.12 2.784-1.008.066.177.567 1.338.126 2.709.744.844 1.122 1.898 1.122 3.036 0 2.346-1.354 4.317-4.59 4.886a2.927 2.927 0 0 1 .875 2.09v2.581c.018.207 0 .411.344.411 4.065-1.37 6.99-5.21 6.99-9.734C20.544 4.593 15.945 0 10.274 0Z"/>
+              </svg>                          
+            </a>
           </span>
         </div>
       </footer>
@@ -427,6 +434,6 @@
       <script>
         AOS.init();
       </script>
-      <script src="main.js"></script>
+      <script src="script.js"></script>
 </body>
 </html>
