--- a/index.html
+++ b/index.html
@@ -434,6 +434,6 @@
       <script>
         AOS.init();
       </script>
-      <script src="script.js"></script>
+      <script src="main.js"></script>
 </body>
 </html>
