--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                   <p class="leading-relaxed mb-3">Web ini disusun untuk menyelesaikan tugas UAS Mata Kuliah Aljabar Linear semester 1 menggunakan HTML, CSS dan JavaScript </p>
                   <div class="flex items-center flex-wrap">
                     <a href="https://elokfaiqohh.github.io/ProjectUAS/" target="_blank" class="text-pink-400 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                      <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M5 12h14"></path>
+                        <path d="M12 5l7 7-7 7"></path>
+                      </svg>
                     </a>
                     <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
                      12
