--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
             <h1 class="title-font md:text-6xl text-3xl mb-6 font-bold text-white">Hi, I am <span class="auto-type text-pink-500"></span> </h1>
             <h2 class="title-font sm:text-3xl text-3xl mb-8 font-medium text-white">Junior Front End Web Dev</h2>
-            <p id="deskripsi" class="mb-8 pr-24">I am a creative, innovative person with a high learning spirit and a love of learning new things.  All about IT.</p>
+            <p id="deskripsi" class="mb-8 pr-24">I am a creative, innovative person with a high learning spirit and a love of learning new things.  All about technology.</p>
             <div class="flex justify-center">
               <a id="learnMore" href="#intro" class="inline-flex text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg">Learn More</a>
               <button id="openResume" class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Check My Resume</button>
