--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <span onclick="location.reload()" class="ml-3 text-xl">Elok Faiqoh</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a href="#intro" onclick="location.reload()" class="mr-5 hover:text-pink-200">About me</a>
-            <a href="#project" onclick="location.reload()" class="mr-5 hover:text-pink-200">Projects</a>
-            <a href="#info" onclick="location.reload()" class="mr-5 hover:text-pink-200">Contact</a>
+            <a href="#intro" " class="mr-5 hover:text-pink-200">About me</a>
+            <a href="#project" " class="mr-5 hover:text-pink-200">Projects</a>
+            <a href="#info" " class="mr-5 hover:text-pink-200">Contact</a>
           </nav>
         </div>
       </header>
