--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                         <path d="M12 5l7 7-7 7"></path>
                       </svg>
                     </a>
-                    <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
+                    <span translate="no" class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
                       01
                      </span>
-                     <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                     <span translate="no" class="text-gray-500 inline-flex items-center leading-none text-sm">
                        2023
                      </span>
                   </div>
@@ -212,10 +212,10 @@
                         <path d="M12 5l7 7-7 7"></path>
                       </svg>
                     </a>
-                    <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
+                    <span translate="no" class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
                      12
                     </span>
-                    <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                    <span translate="no" class="text-gray-500 inline-flex items-center leading-none text-sm">
                       2023
                     </span>
                   </div>
@@ -236,10 +236,10 @@
                         <path d="M12 5l7 7-7 7"></path>
                       </svg>
                     </a>
-                    <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
+                    <span translate="no" class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
                       06
                      </span>
-                     <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                     <span translate="no" class="text-gray-500 inline-flex items-center leading-none text-sm">
                        2024
                      </span>
                   </div>
