--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
+          <form action="https://formspree.io/f/xzzpgrke" method="POST"  class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
             <h2 class="text-white text-lg mb-1 font-medium title-font">Feedback</h2>
             <p class="leading-relaxed mb-5">Your feedback is invaluable in helping me improve my skills. Please share your thoughts and suggestions to help me better serve you in the future. Thank you for your time and input.</p>
             <div class="relative mb-4">
@@ -506,9 +506,9 @@
               <label for="message" class="leading-7 text-sm text-gray-400">Message</label>
               <textarea id="message" name="message" class="w-full bg-gray-800 rounded border border-gray-700 focus:border-pink-500 focus:ring-2 focus:ring-pink-900 h-32 text-base outline-none text-gray-100 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
             </div>
-            <button class="text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg">Button</button>
+            <button id="submit" disabled class="text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg">Button</button>
             <p class="text-xs text-gray-400 text-opacity-90 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
-          </div>
+          </form>
         </div>
       </section>
 
