--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="flex-grow">
                   <h2 class="text-white text-lg title-font font-medium mb-3">Hard Skill</h2>
-                  <p class="leading-relaxed text-base">Web Development, Responsive Web Design, Wordpress Development, Game Developer, Administration, Canva Designer</p>
+                  <p class="leading-relaxed text-base">Web Development, Responsive Web Design, Wordpress Development, Game Developer, Administration, Graphic Designer</p>
                   <a class="mt-3 text-pink-400 inline-flex items-center">Learn More
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -252,7 +252,7 @@
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">Website</h2>
                   <h1 class="title-font text-lg font-medium text-white mb-3"><span translate="no"> Khoja Restaurant</span> </h1>
-                  <p class="leading-relaxed mb-3">This website is currently under development using <span translate="no"> WordPress Elementor</span>, collaboratively with a team for Khoja Restaurant as an internship project. </p>
+                  <p class="leading-relaxed mb-3">This website was created using <span translate="no"> WordPress Elementor</span>, collaboratively with a dedicated team for Khoja Restaurant as part of an internship project. </p>
                   <div class="flex items-center flex-wrap ">
                     <a href="https://elok.42web.io/home/" target="_blank" class="text-pink-400 inline-flex items-center md:mb-2 lg:mb-0">Learn More
                       <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -261,7 +261,7 @@
                       </svg>
                     </a>
                     <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
-                      NOW
+                      07
                      </span>
                      <span class="text-gray-500 inline-flex items-center leading-none text-sm">
                        2024
