--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">Website</h2>
                   <h1 class="title-font text-lg font-medium text-white mb-3"><span translate="no"> Weather App</span> </h1>
-                  <p class="leading-relaxed mb-3">This website is under development for a team project as part of the Midterm Exam assignment for the OOP course, using HTML, CSS, and JavaScript. </p>
+                  <p class="leading-relaxed mb-3">This project was created using the OpenWeatherMap API to retrieve and display weather data, allowing for an interactive and dynamic user experience.</p>
                   <div class="flex items-center flex-wrap ">
                     <a href="https://elokfaiqohh.github.io/weather_app/" target="_blank" class="text-pink-400 inline-flex items-center md:mb-2 lg:mb-0">Learn More
                       <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -285,10 +285,34 @@
                       </svg>
                     </a>
                     <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
-                      NOW
+                      10
                      </span>
                      <span class="text-gray-500 inline-flex items-center leading-none text-sm">
                        2024
+                     </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div id="website" data-aos="zoom-in-up" data-aos-duration="4000" class="p-4 md:w-1/3">
+              <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/calendar.png" alt="blog">
+                <div class="p-6">
+                  <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">Website</h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3"><span translate="no"> Calendar with Todo</span> </h1>
+                  <p class="leading-relaxed mb-3">This website was developed as a team project for our final exam in the OOP course, using HTML, CSS, and JavaScript, without the use of any frameworks.</p>
+                  <div class="flex items-center flex-wrap ">
+                    <a href="https://elokfaiqohh.github.io/calendarWithTodo/" target="_blank" class="text-pink-400 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                      <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M5 12h14"></path>
+                        <path d="M12 5l7 7-7 7"></path>
+                      </svg>
+                    </a>
+                    <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
+                      01
+                     </span>
+                     <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                       2025
                      </span>
                   </div>
                 </div>
