--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
             <div id="website" data-aos="zoom-in-up" data-aos-duration="4000" class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/weather.png" alt="blog">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/weatherr.png" alt="blog">
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">Website</h2>
                   <h1 class="title-font text-lg font-medium text-white mb-3"><span translate="no"> Weather App</span> </h1>
