--- a/index.html
+++ b/index.html
@@ -171,9 +171,18 @@
 
 
 
+      <section class="text-gray-400 bg-gray-900 body-font">
+        <div class="text-center pt-20">
+          <h1 class="sm:text-3xl text-2xl font-medium title-font text-white mb-4">Recent Project</h1>
+          <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-400 text-opacity-80">Here are some of my latest projects that showcase my skills in programming, supported by various applications and tools I’ve mastered along the way:</p>
+          <div class="flex mt-6 justify-center">
+            <div class="w-16 h-1 rounded-full bg-pink-500 inline-flex"></div>
+          </div>
+        </div>
+      </section>
       <section id="project" class="text-gray-400 bg-gray-900 body-font">
-        <div class="container px-5 py-24 mx-auto">
-          <div class="flex -m-4 sm:justify-center justify-start">
+        <div class="container px-5 py-24 pt-20 mx-auto">
+          <div class="flex -m-4 flex-row-reverse justify-end">
             <div id="website"  data-aos="zoom-in-up" data-aos-duration="4000"  class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
                 <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="assets/sekolah.png" alt="blog">
