--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <span onclick="location.reload()" class="ml-3 text-xl">Elok Faiqoh</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a href="#intro" " class="mr-5 hover:text-pink-200">About me</a>
-            <a href="#project" " class="mr-5 hover:text-pink-200">Projects</a>
-            <a href="#info" " class="mr-5 hover:text-pink-200">Contact</a>
+            <a href="#intro" class="mr-5 hover:text-pink-200">About me</a>
+            <a href="#project" class="mr-5 hover:text-pink-200">Projects</a>
+            <a href="#info" class="mr-5 hover:text-pink-200">Contact</a>
           </nav>
         </div>
       </header>
@@ -29,8 +29,8 @@
         <div class="container mx-auto flex px-10 pb-0 pt-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
             <h1 class="title-font md:text-6xl text-3xl mb-6 font-bold text-white">Hi, I am <span translate="no" class="auto-type text-pink-500"></span> </h1>
-            <h2 class="title-font sm:text-3xl text-3xl mb-8 font-medium text-white">Front End Web Developer</h2>
-            <p id="deskripsi" class="mb-8 pr-24">I am a creative, innovative person with a high learning spirit and a love of learning new things.  All about technology.</p>
+            <h2 class="title-font sm:text-3xl text-3xl mb-8 font-medium text-white">Junior Fullstack Web Developer</h2>
+            <p id="deskripsi" class="mb-8 pr-24">I am a creative, innovative person with a high learning spirit and a love of learning new things. All about technology.</p>
             <div class="flex justify-center">
               <a id="learnMore" href="#intro" class="inline-flex text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg">Learn More</a>
               <a href="assets/CV ATS ELOK FAIQOH.pdf" download id="openResume" class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Check My Resume</a>
@@ -48,7 +48,7 @@
         <div  data-aos="fade-up" data-aos-duration="3000" class="container mx-auto flex px-0 py-24 items-center justify-center flex-col">
           <div class="text-center py-14 px-11 lg:w-3/3 w-full">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Get to Know Me</h1>
-            <p class="text-justify pt-10">Hello! My name is Elok Faiqoh. I am currently pursuing a degree in Informatics Engineering at the State University of Surabaya. My deep interest in information technology, especially software development, drives my aspiration to pursue a career as a <span translate="no"> software developer</span>  or <span translate="no"> full-stack developer.</span> </p>
+            <p class="text-justify pt-10">Hello! My name is Elok Faiqoh, a <span translate="no">Junior Full-Stack Web Developer</span> and Informatics Engineering student at the State University of Surabaya. I specialize in crafting responsive, visually appealing, and user-friendly interfaces while continuously expanding my skills across the full web development stack. </p>
               <p class="text-justify">I created this website as a platform to introduce myself to you. Here, you can find various information about me, including my educational background, experiences, and the projects I have worked on. I hope this information helps you get to know me better.</p>
               <p class="text-justify  pb-3">In addition to my strong interest in information technology, I am a creative, innovative individual with a high enthusiasm for learning. The drive to continually learn and explore new knowledge, particularly in the technology field, is a principle I hold dearly.</p>
               <p class="text-justify">Thank you for visiting my website.</p><br>
