--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
               <p class="mb-3 leading-relaxed">A full-stack platform built with React and Laravel for managing events,
                 participants, and automatically generating professional e-certificates.</p>
               <div class="flex flex-wrap items-center ">
-                <a href="https://elokfaiqohh.github.io/calendarWithTodo/" target="_blank"
+                <a href="#" target="_blank"
                   class="inline-flex items-center text-pink-400 md:mb-2 lg:mb-0">Learn More
                   <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                     stroke-linecap="round" stroke-linejoin="round">
@@ -440,7 +440,7 @@
               <p class="mb-3 leading-relaxed">A full-stack internal web platform built during my internship at JTV,
                 where I worked on both frontend and backend features to improve usability and performance.</p>
               <div class="flex flex-wrap items-center ">
-                <a href="https://elokfaiqohh.github.io/calendarWithTodo/" target="_blank"
+                <a href="#" target="_blank"
                   class="inline-flex items-center text-pink-400 md:mb-2 lg:mb-0">Learn More
                   <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                     stroke-linecap="round" stroke-linejoin="round">
