--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </a>
                 <span
                   class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none text-gray-500 border-r-2 border-gray-800 lg:ml-auto md:ml-0">
-                  01
+                  NOW
                 </span>
                 <span class="inline-flex items-center text-sm leading-none text-gray-500">
                   2025
@@ -450,7 +450,7 @@
                 </a>
                 <span
                   class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none text-gray-500 border-r-2 border-gray-800 lg:ml-auto md:ml-0">
-                  01
+                  NOW
                 </span>
                 <span class="inline-flex items-center text-sm leading-none text-gray-500">
                   2025
